# Flashback-dbg

./: 01_especificacion.md  02_cfg_schema.json  04_cfg_model.py  LICENSE  Makefile  README.md  flashback.py  notebook_semana1.ipynb  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/binarios/: syscalls  syscalls.c  test  test.c
docs/: 00_README.md  03_ejemplo_hello.json  ARCHITECTURE.md
flashback/: __init__.py  __main__.py  disassembler.py  enricher.py  instruction_translator.py  models.py  translator.py
flashback/arch/: base.py
flashback/arch/x86_64/: calling_convention.py  disassembler.py  enricher.py  instruction_sem.py  register_map.py  syscall_table.py
flashback/core/: cfg_builder.py  exporter.py  models.py  translator.py
flashback/data/: __init__.py  libc_prototypes.json  libc_signatures.py  syscalls_x64.py  syscalls_x86_64.json
flashback/ui/: cli.py
src/cfg/: model.py  primer_cfg.json
src/cli/: main.py
src/enricher/: enricher.py
src/extractor/: extractor.py
src/persistence/: persistence.py
src/translator/: test_translator.py  translator.py
tests/: test_functional.py  test_integration.py  test_traceability.py
