[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashback"
version = "0.1.0"
description = "Binary-to-C reconstruction with bidirectional traceability"
requires-python = ">=3.10"
dependencies = [
    "capstone>=5.0",
    "lief>=0.14",
    "networkx>=3.0",
    "pyelftools>=0.31",
    "jsonschema>=4.0",
]

[project.scripts]
flashback = "flashback.ui.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "flake8>=7.0",
    "flake8-bugbear",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flashback*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
